# NetworkManager-openvpn

./: .gitattributes  .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  NEWS  NetworkManager-openvpn.doap  autogen.sh  config.h.meson  configure.ac  configure.in  meson.build  meson_options.txt  network-manager-openvpn.doap  nm-openvpn-service.conf  nm-openvpn-service.name.in  nm-openvpn-sysusers.conf.in  nm-openvpn-tmpfiles.conf.in  nm-openvpn.desktop.in  nm-test-helpers.h
appdata/: meson.build  network-manager-openvpn.appdata.xml.in  network-manager-openvpn.metainfo.xml.in
auth-dialog/: Makefile.am  gnome-two-password-dialog.c  gnome-two-password-dialog.h  main.c  meson.build  vpn-password-dialog.c
common/: Makefile.am  nm-glib-compat.h  utils.c  utils.h
common-gnome/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  lt.po  lv.po  (+26 more)
properties/: Makefile.am  auth-helpers.c  auth-helpers.h  import-export.c  import-export.h  meson.build  nm-openvpn-dialog.glade  nm-openvpn-dialog.ui  nm-openvpn-editor-plugin.c  nm-openvpn-editor-plugin.h  nm-openvpn-editor.c  nm-openvpn-editor.h  nm-openvpn.c  nm-openvpn.h
properties/tests/: Makefile.am  test-import-export.c
properties/tests/conf/: Makefile.am  compress.ovpn  connect-timeout.ovpn  crl-dir.ovpn  crl-file.ovpn  data-ciphers-fallback.ovpn  device-notype.ovpn  device.ovpn  explicit-exit-notify.ovpn  keepalive.ovpn  keysize.ovpn  mtu-disc.ovpn  password.conf  ping-with-exit.ovpn  ping-with-restart.ovpn  pkcs12-with-ca.ovpn  pkcs12.ovpn  port.ovpn  proto-tcp-client.ovpn  proto-tcp.ovpn  proto-tcp4-client.ovpn  proto-tcp4.ovpn  proto-tcp6-client.ovpn  proto-tcp6.ovpn  proto-udp.ovpn  proto-udp4.ovpn  proto-udp6.ovpn  proxy-http.ovpn  push-peer-info.ovpn  redirect-gateway.ovpn  route-defgw.ovpn  route.ovpn  rport.ovpn  server-poll-timeout.ovpn  tls-inline-ca.pem  tls-inline-crl-verify-file.pem  tls-inline-ta.pem  tls-inline.ovpn  tls.ovpn  tls2.ovpn  (+2 more)
shared/: Makefile.am  README  meson.build  nm-default.h  nm-openvpn-service-defines.h  nm-service-defines.h  nm-test-utils.h  utils.c  utils.h
shared/nm-utils/: nm-glib.h  nm-test-utils.h  nm-vpn-plugin-utils.c  nm-vpn-plugin-utils.h
src/: Makefile.am  helper-config.c  helper-config.h  meson.build  nm-openvpn-service-defines.h  nm-openvpn-service-openvpn-helper.c  nm-openvpn-service.c  nm-openvpn-service.h
src/tests/: Makefile.am  test-helper-config.c
