EXTRA_DIST = \
    README \
    nm-utils/gsystem-local-alloc.h \
    nm-utils/nm-glib.h \
    nm-utils/nm-macros-internal.h \
    nm-utils/nm-shared-utils.c \
    nm-utils/nm-shared-utils.h \
    nm-utils/nm-test-utils.h \
    nm-default.h \
    nm-service-defines.h \
    utils.c \
    utils.h \
    $(NULL)
